<resources>
    <string name="app_name">SQL Interview Success</string>
    <string name="txt_all_question">All Q&amp;A</string>
    <string name="txt_save_for_later">Bookmarks</string>
    <string name="txt_read">Read</string>
    <string name="txt_tips">Tips</string>
    <string name="msg_subscription">You can see only 25 items free, for click subscribe button</string>
    <string-array name="question_type">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="title_activity_tips">TipsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="txt_buy_now">Buy Premium</string>
    <string name="txt_premium">Premium</string>
    <string name="txt_btn_restore">Restore Purchase</string>
    <string name="txt_upgrade_now">Upgrade Now!</string>
    <string name="txt_symbol">$ 300.00/lifetime</string>
    <string name="txt_content">Comprehensive SQL Interview Prep: Get access to 259 expertly curated Oracle SQL interview questions, ranging from beginner to advanced levels, ensuring you’re fully prepared for any interview scenario.</string>
    <string name="txt_content_1">Expert-Crafted Answers: Access accurate and reliable answers created by a database expert with 16 years of experience. By mastering these Q&amp;As, you\'ll confidently tackle any SQL challenge.</string>
    <string name="txt_content_2">In-Depth Coverage: Dive deep into essential SQL topics, including data analytics, joins, subqueries, row-level and aggregate functions, tricky and complex questions, advanced queries, analytical functions, data modelling, performance tuning, data handling, indexing, constraints, and more.</string>
    <string name="txt_content_3">Clear Explanations &amp; Code Snippets: Each answer comes with detailed explanations and practical code snippets, simplifying even the most complex concepts.</string>
    <string name="txt_content_4">SQL Mastery: Perfect for those looking to deepen their understanding of Oracle SQL database functionalities and achieve true SQL mastery.</string>
    <string name="txt_content_5">Maximize Interview Success: With comprehensive, interview-focused content, this app equips you with the knowledge and confidence to succeed in your upcoming SQL interviews.</string>
    <string name="txt_content_6">Future-Proof Learning: Stay ahead with free access to all future updates, ensuring you\'re up-to-date with the latest SQL trends and interview techniques.</string>
    <string name="txt_share">Hello,

Explore this comprehensive app, thoughtfully designed to enhance your expertise in Oracle SQL interview questions and answers, helping you achieve success in your next interview.

https://play.google.com/store/apps/details?id=com.sqlinterviewsuccess.aityl

Thanks,</string>
    <string name="txt_other_app">https://play.google.com/store/apps/dev?id=5422523287693933202</string>
    <string name="txt_unlock">Unlock Premium Access:</string>
</resources>