<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BuyNowActivity">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/iv"
            app:srcCompat="@drawable/ic_drawable_background"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/roundedCornersImageView"
            />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_amount"
        android:text="@string/txt_symbol"
        app:layout_constraintTop_toBottomOf="@id/iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/txt_extra_big_size"
        android:textColor="@color/black"
        android:fontFamily="@font/opensans_semibold"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_unlick"
        android:text="@string/txt_unlock"
        app:layout_constraintTop_toBottomOf="@id/tv_amount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="@dimen/txt_size_small"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_unlick"
        android:id="@+id/list_view"
        android:layout_margin="5dp"
        android:divider="@null"
        android:dividerHeight="0dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_last_content"
        android:text="@string/txt_last_content"
        app:layout_constraintTop_toBottomOf="@id/list_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginStart="12dp"
        android:textColor="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_buy_premium"
        android:text="@string/txt_buy_now"
        app:layout_constraintTop_toBottomOf="@id/tv_last_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/opensans_semibold"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_restore"
        android:text="@string/txt_btn_restore"
        app:layout_constraintTop_toBottomOf="@id/btn_buy_premium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:fontFamily="@font/opensans_semibold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
