<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.QuestionActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_60dp"
            android:id="@+id/llc"
            app:layout_constraintTop_toTopOf="parent"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_all_question"
                android:text="@string/txt_all_question"
                android:layout_weight="1"
                android:textSize="10sp"
                android:layout_marginRight="@dimen/dimen_1dp"
                android:insetTop="@dimen/margin_2dp"
                android:insetBottom="@dimen/margin_2dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_save_for_latter"
                android:text="@string/txt_save_for_later"
                android:layout_weight="1"
                android:textSize="@dimen/btn_small_txt_size_10sp"
                android:layout_marginLeft="@dimen/dimen_1dp"
                android:layout_marginRight="@dimen/dimen_1dp"
                android:backgroundTint="@color/card_foreground_color"
                android:insetTop="@dimen/margin_2dp"
                android:insetBottom="@dimen/margin_2dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_marked_as_read"
                android:text="@string/txt_read"
                android:layout_weight="1"
                android:textSize="@dimen/btn_small_txt_size_10sp"
                android:layout_marginLeft="@dimen/dimen_1dp"
                android:layout_marginRight="@dimen/dimen_1dp"
                android:backgroundTint="@color/card_foreground_color"
                android:insetTop="@dimen/margin_2dp"
                android:insetBottom="@dimen/margin_2dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_tips"
                android:text="@string/txt_tips"
                android:layout_weight="1"
                android:textSize="@dimen/btn_small_txt_size_10sp"
                android:layout_marginLeft="@dimen/dimen_1dp"
                android:backgroundTint="@color/card_foreground_color"
                android:insetTop="@dimen/margin_2dp"
                android:insetBottom="@dimen/margin_2dp"
                />

        </LinearLayout>
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_view"
            app:layout_constraintTop_toBottomOf="@id/llc"
            android:layout_margin="@dimen/margin_5dp"
            android:background="@drawable/spinner_background"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:id="@+id/view_11"
            android:background="@color/color_view"
            app:layout_constraintTop_toBottomOf="@id/search_view"
            android:layout_marginTop="@dimen/margin_5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/rl_heading"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/view_11"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginRight="@dimen/margin_5dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_srno"
                android:text="SNO"
                android:textSize="@dimen/text_size"
                android:layout_centerVertical="true"
                android:textColor="@color/txt_color"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ques_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_srno"
                android:text="Title"
                android:textSize="@dimen/text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="@dimen/margin_5dp"
                android:layout_toLeftOf="@id/tv_priority"
                android:textColor="@color/txt_color"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_priority"
                android:text="Priority"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/text_size"
                android:layout_centerVertical="true"
                android:textColor="@color/txt_color"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:id="@+id/view"
            android:background="@color/color_view"
            app:layout_constraintTop_toBottomOf="@id/rl_heading"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height= "wrap_content"
            android:id="@+id/rv_question_list"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="@dimen/margin_5dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_oops_moment"
            android:text="Oops, No question found"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:visibility="visible"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_subscription"
            android:text="@string/txt_subscribe"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/margin_2dp"
            android:layout_marginRight="@dimen/margin_2dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>